--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,5 +14,11 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+    <!-- <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/> -->
+    <queries> 
+        <intent> 
+            <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" /> 
+        </intent> 
+    </queries>
 </manifest>
