--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
     <application
         android:label="FlipLauncher"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
@@ -27,6 +25,7 @@
     <queries> 
         <intent> 
             <action android:name="android.intent.action.MAIN" />
+            <!-- <category android:name="android.intent.category.LAUNCHER" />  -->
         </intent> 
     </queries>
 </manifest>
