--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 android.useAndroidX=true
 android.enableJetifier=false
-org.gradle.java.home=/usr/lib/jvm/openjdk-bin-17
+#org.gradle.java.home=/usr/lib/jvm/openjdk-bin-17
 org.gradle.configuration-cache=true
